# BrailleToKor_Python

./: README.md  pyproject.toml
BrailleToKor/: BraillToKor.py  BrailleData.py  BrailleToKor.py  PunctuationFunc.py
src/BrailleToKor/: BrailleToKor.py  KorData.py  NumberFunc.py
src/BrailleToKorean/: BrailleToKor.py  PunctuationFunc.py
